# Hog

./: CMakeLists.txt  hog_features.cpp  hog_features.h  main.cpp
